[package]
name = "nostr-bbs-relay-worker"
version = "1.0.0-beta.6"
edition = "2021"
description = "Nostr relay Worker for the nostr-bbs forum kit: NIP-01/09/11/16/29/33/42/45/50/56/59/65/90/98 WebSocket relay with D1 + Durable Objects"
license = "AGPL-3.0-only"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
homepage = "https://github.com/DreamLab-AI/nostr-rust-forum"
documentation = "https://docs.rs/nostr-bbs-relay-worker"
keywords = ["nostr", "bbs", "relay", "websocket", "cloudflare-workers"]
categories = ["network-programming", "web-programming"]
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-exports = []

[dependencies]
nostr-bbs-core = { workspace = true }
nostr-bbs-rate-limit = { workspace = true }
worker = { workspace = true, features = ["d1"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
async-trait = { workspace = true }
# C5 fix: NIP-42 AUTH challenge generation requires CSPRNG. The js-feature
# routes getrandom calls to crypto.getRandomValues on the CF Workers runtime.
getrandom = { workspace = true }
