[package]
name = "nostr-bbs-search-worker"
version = "3.0.0-rc4"
edition = "2021"
description = "Search Worker: RVF vector store, cosine k-NN, hash embeddings (nostr-bbs)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
homepage = "https://github.com/DreamLab-AI/nostr-rust-forum"
documentation = "https://docs.rs/nostr-bbs-search-worker"
keywords = ["nostr", "bbs", "search", "embeddings", "cloudflare-workers"]
categories = ["algorithms", "web-programming"]
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostr-bbs-core = { workspace = true }
worker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
rvf-types = { version = "0.2", default-features = false }
async-trait = { workspace = true }
