[package]
name = "nostr-bbs-setup-skill"
version = "1.0.0-beta.6"
edition = "2021"
description = "Provider-abstracted operator-onboarding skill for nostr-bbs (ADR-079)"
license = "AGPL-3.0-only"
repository = "https://github.com/DreamLab-AI/nostr-rust-forum"
homepage = "https://github.com/DreamLab-AI/nostr-rust-forum"
documentation = "https://docs.rs/nostr-bbs-setup-skill"
keywords = ["nostr", "bbs", "deployment", "cli", "onboarding"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"

[features]
default = []

[dependencies]
nostr-bbs-core = { workspace = true }
nostr-bbs-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
