[package]
name = "pod-worker"
version = "0.1.0"
edition = "2021"
description = "Nostr BBS pod Worker: Solid pods + R2 storage + WAC ACL"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostr-core = { workspace = true }
worker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
js-sys = { workspace = true }
