[package]
name = "preview-worker"
version = "0.1.0"
edition = "2021"
description = "Nostr BBS link preview Worker: OG metadata + Twitter oEmbed + SSRF protection"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
regex = "1"
