[package]
name = "relay-worker"
version = "0.1.0"
edition = "2021"
description = "Nostr BBS Nostr relay Worker: NIP-01/11/16/33/98 WebSocket relay with D1 + Durable Objects"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostr-core = { workspace = true }
worker = { workspace = true, features = ["d1"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
