[package]
name = "search-worker"
version = "0.1.0"
edition = "2021"
description = "Nostr BBS search Worker: RVF vector store, cosine k-NN, hash embeddings"

[lib]
crate-type = ["cdylib"]

[dependencies]
nostr-core = { workspace = true }
worker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
rvf-types = { version = "0.2", default-features = false }
